--- a/.github/workflows/ci_pipeline.yml
+++ b/.github/workflows/ci_pipeline.yml
@@ -31,6 +31,7 @@ jobs:
       run: pip install mlflow==2.19.0
 
     - name: 4. Run MLflow Project (Training)
+      shell: bash -l {0}
       run: |
         mlflow run MLProject/ \
          -P n_estimators=150 \
