Fix:Downgrade Setup Tool

--- a/.github/workflows/ci_pipeline.yml
+++ b/.github/workflows/ci_pipeline.yml
@@ -29,7 +29,8 @@ jobs:
 
     - name: 3. Install MLflow
       run: |
-        pip install --upgrade pip setuptools 
+        pip install --upgrade pip
+        pip install "setuptools<68" 
         pip install mlflow==2.9.2
 
     - name: 4. Run MLflow Project (Training)
