--- a/.github/workflows/ci_pipeline.yml
+++ b/.github/workflows/ci_pipeline.yml
@@ -1,4 +1,6 @@
-name: CI Pipeline (MLProject + Docker)
+# File: .github/workflows/ci_pipeline.yml
+
+name: 3. CI Pipeline (MLProject + Docker)
 
 on:
   push:
@@ -17,21 +19,20 @@ jobs:
     - name: 1. Checkout repository
       uses: actions/checkout@v4
 
-    - name: 2. Setup Python and Conda
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.9'
-    - name: Setup Conda
+    # Kembali ke Python 3.11 (modern)
+    - name: 2. Setup Conda
       uses: conda-incubator/setup-miniconda@v2
       with:
         auto-update-conda: True
-        python-version: 3.9
+        python-version: 3.11 # <-- Versi Modern
 
+    # Install MLflow terbaru (bukan 2.9.2)
     - name: 3. Install MLflow
       run: |
-        pip install --upgrade pip
-        pip install "setuptools<68" mlflow==2.9.2
+        pip install --upgrade pip setuptools
+        pip install mlflow # <-- Versi Terbaru
 
+    # Langkah 4 & 5 tetap sama
     - name: 4. Run MLflow Project (Training)
       shell: bash -l {0}
       run: |
@@ -45,17 +46,36 @@ jobs:
         name: mlruns-artifact
         path: mlruns/
 
+    # Langkah 6 tetap sama
     - name: 6. Login to Docker Hub
       uses: docker/login-action@v3
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-    - name: 7. Build and Push Docker Image
-      env:
-        DOCKER_IMAGE_NAME: firecrown/model-gym-ci
+    # ==============================================================
+    # LANGKAH 7 YANG BARU (Menggantikan mlflow build-docker)
+    # Ini adalah cara yang Anda lihat di contoh sukses
+    # ==============================================================
+    - name: 7. Build and Push Docker Image (Standar Industri)
       run: |
-        mlflow build-docker \
-          --model-uri MLProject/ \
-          --image-name $DOCKER_IMAGE_NAME:latest
-          docker push $DOCKER_IMAGE_NAME:latest
+        # 7.1. Dapatkan RUN_ID dari model yang baru dilatih
+        # Ini adalah langkah 'Get latest MLflow run_id' di contoh Anda
+        export LATEST_RUN_ID=$(ls -t mlruns/0 | head -n 1)
+        echo "LATEST_RUN_ID=${LATEST_RUN_ID}" >> $GITHUB_ENV
+        echo "Membangun model dari Run ID: ${LATEST_RUN_ID}"
+
+        # 7.2. Perbarui 'CMD' di Dockerfile dengan RUN_ID yang benar
+        # Ini adalah bagian "sulap"nya
+        sed -i "s|\[RUN_ID\]|${LATEST_RUN_ID}|g" MLProject/Dockerfile
+
+        # 7.3. Build, Tag, dan Push (seperti di contoh Anda)
+        export DOCKER_IMAGE_NAME="firecrown/model-gym-ci" # <-- GANTI INI
+        
+        # Build
+        docker build -t $DOCKER_IMAGE_NAME:latest -f MLProject/Dockerfile ./MLProject
+        
+        # Tag (sudah dilakukan oleh -t)
+        
+        # Push
+        docker push $DOCKER_IMAGE_NAME:latest
