--- a/MLProject/conda.yaml
+++ b/MLProject/conda.yaml
@@ -3,11 +3,10 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - python=3.12
+  - python=3.9
   - pip
   - pip:
-    - setuptools
-    - mlflow
+    - mlflow>=2.0
     - scikit-learn
     - pandas
     - numpy
