--- a/.github/workflows/ci_pipeline.yml
+++ b/.github/workflows/ci_pipeline.yml
@@ -1,103 +1,85 @@
-# .github/workflows/ci_pipeline.yml
+name: CI/CD Gym Model (Kriteria 3)
 
-name: MLflow CI-CD Kriteria 3
-
-# Trigger: Workflow ini berjalan setiap kali ada push ke branch 'main'
 on:
   push:
     branches:
       - main
+  pull_request:
+    branches:
+      - main
+
+# Izin untuk push artefak (cm.png) kembali ke repo
+permissions:
+  contents: write
 
 jobs:
-  train-and-deploy:
+  build-and-deploy:
     runs-on: ubuntu-latest
-    
     steps:
-    # --- 1. Persiapan ---
-    - name: 1. Checkout Repository
-      uses: actions/checkout@v4
+      - name: 1. Checkout Repository
+        uses: actions/checkout@v4
 
-    - name: 2. Set up Python 3.9
-      uses: actions/setup-python@v5
-      with:
-        python-version: 3.9
+      - name: 2. Set up Python 3.12.7
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.12.7" # <-- DIUBAH SESUAI PERMINTAAN ANDA
 
-    # --- 2. Instalasi (Memperbaiki error 'activate' Anda) ---
-    - name: 3. Install Conda
-      uses: conda-incubator/setup-miniconda@v3
-      with:
-        auto-update-conda: true
-        python-version: 3.9
-        # Kita HAPUS 'conda-yaml-file' dari sini
+      - name: 3. Install Dependencies
+        run: |
+          python -m pip install --upgrade pip
+          # Kita install semua library dari requirements.txt
+          pip install -r MLProject/requirements.txt
 
-    - name: 3.5. Create Conda Environment
-      shell: bash -l {0} # Wajib pakai 'bash -l {0}' untuk 'conda'
-      run: |
-        # Buat environment secara manual dari file
-        echo "Membuat environment 'my_ml_env' dari file..."
-        conda env create -f MLProject/conda.yaml
+      - name: 4. (BASIC) Run MLflow Project (Training)
+        run: |
+          # --env-manager=local berarti 'gunakan pip di atas'
+          # Kita juga bisa pass parameter, tapi kita pakai default dulu
+          mlflow run MLProject --env-manager=local
+      
+      - name: 5. Get latest MLflow run_id
+        run: |
+          # Ini cara canggih untuk dapat RUN_ID tanpa 'print'
+          # Dia mencari folder 'mlruns' di dalam MLProject
+          RUN_ID=$(ls -td MLProject/mlruns/0/*/ | head -n 1 | cut -d'/' -f4)
+          echo "RUN_ID=$RUN_ID" >> $GITHUB_ENV
+          echo "Latest run_id: $RUN_ID"
+      
+      # --- Kriteria Skilled: Upload Artefak ---
+      # Ini adalah cara lain (selain 'Commit and push')
+      - name: 6. (SKILLED) Upload Artifacts (Model)
+        uses: actions/upload-artifact@v4
+        with:
+          name: ml-model-artifacts
+          path: MLProject/mlruns # Upload folder mlruns
 
-    # --- 3. Kriteria Basic (Menjalankan Training) ---
-    - name: 4. (BASIC) Run MLflow Project (Training)
-      id: train # Kita beri 'id' agar bisa mengambil outputnya
-      shell: bash -l {0} # Wajib untuk 'source activate'
-      run: |
-        # Aktifkan env yang dibuat di langkah 3.5
-        source activate my_ml_env
-        
-        echo "Starting MLflow Run..."
-        # Jalankan training dan tangkap outputnya
-        OUTPUT=$(mlflow run ./MLProject)
-        
-        echo "MLflow run output:"
-        echo "$OUTPUT"
-        
-        # Ambil RUN_ID yang dicetak oleh modelling.py
-        RUN_ID=$(echo "$OUTPUT" | grep 'MLFLOW_RUN_ID=' | cut -d'=' -f2)
-        
-        # Cek apakah RUN_ID ada
-        if [ -z "$RUN_ID" ]; then
-          echo "Error: Could not find MLFLOW_RUN_ID!"
-          exit 1
-        fi
-        
-        echo "MLflow Run ID found: $RUN_ID"
-        # Ekspor RUN_ID agar bisa dipakai di langkah selanjutnya
-        echo "run_id=$RUN_ID" >> $GITHUB_OUTPUT
+      # --- Kriteria Advanced: Build & Push Docker ---
+      - name: 7. (ADVANCED) Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }} # Ganti nama secret jika perlu
+          password: ${{ secrets.DOCKERHUB_TOKEN }}    # Ganti nama secret jika perlu
 
-    # --- 4. Kriteria Skilled (Menyimpan Artefak) ---
-    - name: 5. (SKILLED) Upload Artifacts (Model)
-      uses: actions/upload-artifact@v4
-      with:
-        name: ml-model-artifacts # Nama file zip artefak
-        path: MLProject/mlruns # Upload folder mlruns yang dibuat di Langkah 4
+      - name: 8. (ADVANCED) Build Docker Image with MLflow
+        run: |
+          # Bangun image menggunakan RUN_ID dari langkah 5
+          # Ganti 'evameivina/model-gym-ci' dengan nama Anda
+          mlflow models build-docker \
+            --model-uri "runs:/$RUN_ID/model" \
+            --name "evameivina/model-gym-ci" \
+            --env-manager=local
+            
+      - name: 9. (ADVANCED) Tag and Push Docker Image
+        run: |
+          # Ganti 'evameivina/model-gym-ci' dengan nama Anda
+          docker tag "evameivina/model-gym-ci" "${{ secrets.DOCKERHUB_USERNAME }}/model-gym-ci:latest"
+          docker push "${{ secrets.DOCKERHUB_USERNAME }}/model-gym-ci:latest"
 
-    # --- 5. Kriteria Advanced (Build & Push Docker) ---
-    - name: 6. (ADVANCED) Login to Docker Hub
-      uses: docker/login-action@v3
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-    - name: 7. (ADVANCED) Build Docker Image with MLflow
-      shell: bash -l {0} # Wajib untuk 'source activate'
-      run: |
-        # Aktifkan env lagi
-        source activate my_ml_env
-        
-        # Ambil RUN_ID dari output Langkah 4
-        RUN_ID=${{ steps.train.outputs.run_id }}
-        
-        # Bangun image menggunakan 'mlflow models build-docker'
-        # Ganti 'model-gym-ci' dengan nama image Anda
-        echo "Building Docker image for run_id: $RUN_ID"
-        mlflow models build-docker \
-          --model-uri "runs:/$RUN_ID/model" \
-          --name "evameivina/model-gym-ci:latest" \
-          --env-manager=local
-          
-    - name: 8. (ADVANCED) Push Docker Image to Docker Hub
-      run: |
-        # Push image yang sudah di-build di Langkah 7
-        echo "Pushing image to Docker Hub..."
-        docker push evameivina/model-gym-ci:latest
+      # --- Bonus: Push artefak visualisasi kembali ke Repo ---
+      - name: 10. Commit and push ML artifacts (Plot & Metrics)
+        run: |
+          git config --global user.name 'github-actions'
+          git config --global user.email 'actions@github.com'
+          git add MLProject/artifacts/*.png MLProject/artifacts/*.json || echo "No artifacts found to commit"
+          git commit -m "📦 [CI] Add ML artifacts (plot, metrics)" || echo "Nothing new to commit"
+          # Push kembali ke branch 'main'
+          git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }} HEAD:main
