--- a/.github/workflows/ci_pipeline.yml
+++ b/.github/workflows/ci_pipeline.yml
@@ -1,85 +1,103 @@
-name: CI/CD Gym Model (Kriteria 3)
+name: MLflow CI-CD Kriteria 3 (Gym Regression)
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
   pull_request:
-    branches:
-      - main
+    branches: [ main ]
 
-# Izin untuk push artefak (cm.png) kembali ke repo
 permissions:
-  contents: write
+  contents: write # Diperlukan untuk push artefak kembali ke repo
 
 jobs:
-  build-and-deploy:
+  train-and-deploy:
     runs-on: ubuntu-latest
+    
     steps:
-      - name: 1. Checkout Repository
-        uses: actions/checkout@v4
+    # --- 1. Persiapan ---
+    - name: 1. Checkout Repository
+      uses: actions/checkout@v4
 
-      - name: 2. Set up Python 3.12.7
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.12.7" # <-- DIUBAH SESUAI PERMINTAAN ANDA
+    - name: 2. Set up Python 3.12.7
+      uses: actions/setup-python@v4
+      with:
+        python-version: "3.12.7"
 
-      - name: 3. Install Dependencies
-        run: |
-          python -m pip install --upgrade pip
-          # Kita install semua library dari requirements.txt
-          pip install -r MLProject/requirements.txt
+    # --- 2. Instalasi (Pip-based, lebih cepat) ---
+    - name: 3. Install Dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r MLProject/requirements.txt
+    
+    # --- 3. Kriteria Basic (Menjalankan Training) ---
+    - name: 4. (BASIC) Run MLflow Project (Training)
+      run: |
+        # Jalankan 'main' entry point dari file MLProject
+        # Ini akan otomatis menjalankan 'python modelling.py 100 10'
+        mlflow run MLProject --env-manager=local
 
-      - name: 4. (BASIC) Run MLflow Project (Training)
-        run: |
-          # --env-manager=local berarti 'gunakan pip di atas'
-          # Kita juga bisa pass parameter, tapi kita pakai default dulu
-          mlflow run MLProject --env-manager=local
-      
-      - name: 5. Get latest MLflow run_id
-        run: |
-          # Ini cara canggih untuk dapat RUN_ID tanpa 'print'
-          # Dia mencari folder 'mlruns' di dalam MLProject
-          RUN_ID=$(ls -td MLProject/mlruns/0/*/ | head -n 1 | cut -d'/' -f4)
-          echo "RUN_ID=$RUN_ID" >> $GITHUB_ENV
-          echo "Latest run_id: $RUN_ID"
-      
-      # --- Kriteria Skilled: Upload Artefak ---
-      # Ini adalah cara lain (selain 'Commit and push')
-      - name: 6. (SKILLED) Upload Artifacts (Model)
-        uses: actions/upload-artifact@v4
-        with:
-          name: ml-model-artifacts
-          path: MLProject/mlruns # Upload folder mlruns
+    # --- 4. Kriteria Skilled (Menyimpan Artefak) ---
+    - name: 5. Get latest MLflow run_id
+      id: get_run_id # Beri id agar bisa dipakai di langkah lain
+      run: |
+        # Cari RUN_ID terakhir di dalam folder mlruns
+        # (Path MLProject/mlruns/0/.../ -> kita ambil bagian ke-4)
+        RUN_ID=$(ls -td MLProject/mlruns/0/*/ | head -n 1 | cut -d'/' -f4)
+        echo "RUN_ID=$RUN_ID" >> $GITHUB_ENV
+        echo "run_id=$RUN_ID" >> $GITHUB_OUTPUT
+        echo "Latest run_id: $RUN_ID"
 
-      # --- Kriteria Advanced: Build & Push Docker ---
-      - name: 7. (ADVANCED) Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }} # Ganti nama secret jika perlu
-          password: ${{ secrets.DOCKERHUB_TOKEN }}    # Ganti nama secret jika perlu
+    - name: 6. (SKILLED) Upload Artifacts (Model)
+      uses: actions/upload-artifact@v4
+      with:
+        name: ml-model-artifacts
+        path: MLProject/mlruns # Upload folder mlruns yang dibuat di Langkah 4
 
-      - name: 8. (ADVANCED) Build Docker Image with MLflow
-        run: |
-          # Bangun image menggunakan RUN_ID dari langkah 5
-          # Ganti 'evameivina/model-gym-ci' dengan nama Anda
-          mlflow models build-docker \
-            --model-uri "runs:/$RUN_ID/model" \
-            --name "firecrown/model-gym-ci" \
-            --env-manager=local
-            
-      - name: 9. (ADVANCED) Tag and Push Docker Image
-        run: |
-          # Ganti 'evameivina/model-gym-ci' dengan nama Anda
-          docker tag "firecrown/model-gym-ci" "${{ secrets.DOCKERHUB_USERNAME }}/model-gym-ci:latest"
-          docker push "${{ secrets.DOCKERHUB_USERNAME }}/model-gym-ci:latest"
+    - name: 7. (ADVANCED) Login to Docker Hub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      # --- Bonus: Push artefak visualisasi kembali ke Repo ---
-      - name: 10. Commit and push ML artifacts (Plot & Metrics)
-        run: |
-          git config --global user.name 'github-actions'
-          git config --global user.email 'actions@github.com'
-          git add MLProject/artifacts/*.png MLProject/artifacts/*.json || echo "No artifacts found to commit"
-          git commit -m "📦 [CI] Add ML artifacts (plot, metrics)" || echo "Nothing new to commit"
-          # Push kembali ke branch 'main'
-          git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }} HEAD:main
+    # --- 5. Kriteria Advanced (Build & Push Docker) ---
+    
+    # --- LANGKAH 8 (DENGAN PERBAIKAN PENTING) ---
+    - name: 8. (ADVANCED) Build Docker Image with MLflow
+      run: |
+        # Ambil RUN_ID dari langkah 5
+        RUN_ID=${{ steps.get_run_id.outputs.run_id }}
+        
+        # --- INI ADALAH PERBAIKAN KUNCI ---
+        # Beritahu MLflow di mana harus mencari 'mlruns'
+        export MLFLOW_TRACKING_URI=MLProject/mlruns
+        
+        echo "Membangun Docker image untuk RUN_ID: $RUN_ID dari $MLFLOW_TRACKING_URI"
+        
+        # Perintah build Anda (sudah benar)
+        mlflow models build-docker \
+          --model-uri "runs:/$RUN_ID/model" \
+          --name "firecrown/model-gym-ci" \
+          --env-manager=local
+
+    # --- LANGKAH 9 (SUDAH BENAR) ---
+    - name: 9. (ADVANCED) Tag and Push Docker Image
+      run: |
+        # Tag image yang di-build di Langkah 8
+        docker tag "firecrown/model-gym-ci" "${{ secrets.DOCKERHUB_USERNAME }}/model-gym-ci:latest"
+        
+        # Push image ke Docker Hub
+        docker push "${{ secrets.DOCKERHUB_USERNAME }}/model-gym-ci:latest"
+
+    # --- 6. (Bonus) Push Artefak kembali ke Repo ---
+    - name: 10. Commit and push ML artifacts
+      run: |
+        git config --global user.name 'github-actions[bot]'
+        git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+        git add MLProject/artifacts/*.png MLProject/artifacts/*.json
+        # Cek jika ada perubahan untuk di-commit
+        if [ -n "$(git status --porcelain)" ]; then
+          git commit -m "📦 [CI] Add regression plot and metrics"
+          git push
+        else
+          echo "Tidak ada artefak baru untuk di-commit."
+        fi
