--- a/.github/workflows/ci_pipeline.yml
+++ b/.github/workflows/ci_pipeline.yml
@@ -7,14 +7,14 @@ on:
     branches: [ main ]
 
 permissions:
-  contents: write # Diperlukan untuk push artefak kembali ke repo
+  contents: write 
 
 jobs:
   train-and-deploy:
     runs-on: ubuntu-latest
     
     steps:
-    # --- 1. Persiapan ---
+    # 1. Persiapan
     - name: 1. Checkout Repository
       uses: actions/checkout@v4
 
@@ -23,21 +23,21 @@ jobs:
       with:
         python-version: "3.12.7"
 
-    # --- 2. Instalasi (Pip-based, lebih cepat) ---
+    # 2. Instalasi (Pip-based, lebih cepat)
     - name: 3. Install Dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r MLProject/requirements.txt
     
-    # --- 3. Kriteria Basic (Menjalankan Training) ---
-    - name: 4. (BASIC) Run MLflow Project (Training)
+    # 3. Menjalankan Training
+    - name: 4. Run MLflow Project (Training)
       run: |
         # Jalankan 'main' entry point dari file MLProject
         mlflow run MLProject --env-manager=local
 
-    # --- 4. Kriteria Skilled (Menyimpan Artefak) ---
+    #  4. Menyimpan Artefak
     - name: 5. Get latest MLflow run_id
-      id: get_run_id # Beri id agar bisa dipakai di langkah lain
+      id: get_run_id 
       run: |
         # Cari RUN_ID terakhir di dalam folder mlruns
         RUN_ID=$(ls -td MLProject/mlruns/0/*/ | head -n 1 | cut -d'/' -f4)
@@ -45,27 +45,32 @@ jobs:
         echo "run_id=$RUN_ID" >> $GITHUB_OUTPUT
         echo "Latest run_id: $RUN_ID"
 
-    - name: 6. (SKILLED) Upload Artifacts (Model)
+    - name: 6. Upload Artifacts (Model)
       uses: actions/upload-artifact@v4
       with:
         name: ml-model-artifacts
-        path: MLProject/mlruns # Upload folder mlruns yang dibuat di Langkah 4
+        path: MLProject/mlruns 
 
-    - name: 7. (ADVANCED) Login to Docker Hub
+    - name: 6b. Upload Artifacts to Google Drive
+      uses: anothrNick/drive-upload@v1.0.0
+      with:
+        source: MLProject/mlruns
+        destination: ${{ secrets.GDRIVE_DESTINATION_FOLDER_ID }}
+      env: 
+        GDRIVE_CREDENTIALS: ${{ secrets.GDRIVE_CREDENTIALS }}
+
+    - name: 7. Login to Docker Hub
       uses: docker/login-action@v3
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-    # --- 5. Kriteria Advanced (Build & Push Docker) ---
-    
-    # --- LANGKAH 8 (DENGAN PERBAIKAN 'TRACKING_URI') ---
-    - name: 8. (ADVANCED) Build Docker Image with MLflow
+    #  5. Build & Push Docker
+    - name: 8. Build Docker Image with MLflow
       run: |
         # Ambil RUN_ID dari langkah 5
         RUN_ID=${{ steps.get_run_id.outputs.run_id }}
         
-        # --- INI ADALAH PERBAIKAN KUNCI ---
         # Beritahu MLflow di mana harus mencari 'mlruns'
         export MLFLOW_TRACKING_URI=MLProject/mlruns
         
@@ -77,7 +82,7 @@ jobs:
           --name "firecrown/model-gym-ci" \
           --env-manager=local
 
-    - name: 9. (ADVANCED) Tag and Push Docker Image
+    - name: 9. Tag and Push Docker Image
       run: |
         # Tag image yang di-build di Langkah 8
         docker tag "firecrown/model-gym-ci" "${{ secrets.DOCKERHUB_USERNAME }}/model-gym-ci:latest"
@@ -85,7 +90,7 @@ jobs:
         # Push image ke Docker Hub
         docker push "${{ secrets.DOCKERHUB_USERNAME }}/model-gym-ci:latest"
 
-    # --- 6. (Bonus) Push Artefak kembali ke Repo (PERBAIKAN PATH) ---
+    # 6. Push Artefak kembali ke Repo 
     - name: 10. Commit and push ML artifacts
       run: |
         git config --global user.name 'github-actions[bot]'
@@ -96,7 +101,7 @@ jobs:
         
         # Cek jika ada perubahan untuk di-commit
         if [ -n "$(git status --porcelain)" ]; then
-          git commit -m "📦 [CI] Add regression plot and metrics"
+          git commit -m " [CI] Add regression plot and metrics"
           git push
         else
           echo "Tidak ada artefak baru untuk di-commit."
