Fix: Add Decode gdrive

--- a/.github/workflows/ci_pipeline.yml
+++ b/.github/workflows/ci_pipeline.yml
@@ -51,11 +51,14 @@ jobs:
         name: ml-model-artifacts
         path: MLProject/mlruns 
 
+    - name: Decode GDrive Credentials
+      run: echo "${{ secrets.GDRIVE_CREDENTIALS }}" | base64 --decode > gdrive-credentials.json
+
     - name: Upload Artifacts to Google Drive (Jodebu)
       uses: Jodebu/upload-to-drive@master
       with:
         target: MLProject/mlruns
-        credentials: ${{ secrets.GDRIVE_CREDENTIALS }}
+        credentials: gdrive-credentials.json
         folder: ${{ secrets.GDRIVE_DESTINATION_FOLDER_ID }} 
 
     - name: 7. Login to Docker Hub
