--- a/.github/workflows/ci_pipeline.yml
+++ b/.github/workflows/ci_pipeline.yml
@@ -23,47 +23,46 @@ jobs:
       with:
         python-version: "3.12.7"
 
-    # 2. Instalasi
+    # 2. Instalasi (Pip-based, lebih cepat)
     - name: 3. Install Dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r MLProject/requirements.txt
     
-    # 3. Menjalankan Training (FIXED)
+    # 3. Menjalankan Training
     - name: 4. Run MLflow Project (Training)
       run: |
-        # Definisi Absolute Path untuk Tracking URI
-        # Ini memaksa MLflow menulis di lokasi yang pasti, bukan relatif
-        export MLFLOW_TRACKING_URI="file://${{ github.workspace }}/MLProject/mlruns"
-        
-        echo "Tracking URI set to: $MLFLOW_TRACKING_URI"
-        
-        # Jalankan MLflow Project
+        # Jalankan 'main' entry point dari file MLProject
         mlflow run MLProject --env-manager=local
 
-    # 4. Menyimpan Artefak (FIXED)
+    #  4. Menyimpan Artefak
+    # 4. Menyimpan Artefak & Mengambil ID (DIPERBAIKI)
     - name: 5. Get latest MLflow run_id
       id: get_run_id 
       run: |
-        # Pastikan path pencarian sesuai dengan struktur folder
-        # Kita mencari folder yang baru saja dimodifikasi (-t)
-        RUN_ID=$(ls -td MLProject/mlruns/0/*/ | head -n 1 | cut -d'/' -f4)
+        # Gunakan Absolute Path agar perintah ls tidak bingung
+        SEARCH_DIR="${{ github.workspace }}/MLProject/mlruns/0"
         
+        # Ambil folder terakhir yang dimodifikasi, lalu ambil nama basenya saja (bersih dari slash)
+        # 'basename' jauh lebih aman daripada 'cut' untuk mengambil nama folder
+        LATEST_PATH=$(ls -td "$SEARCH_DIR"/*/ | head -n 1)
+        RUN_ID=$(basename "$LATEST_PATH")
+        
+        # Validasi: Pastikan RUN_ID tidak kosong
         if [ -z "$RUN_ID" ]; then
-          echo "Error: RUN_ID not found!"
+          echo "❌ Error: Tidak dapat menemukan RUN_ID di $SEARCH_DIR"
           exit 1
         fi
         
-        echo "Found RUN_ID: $RUN_ID"
+        echo "✅ Ditemukan RUN_ID: $RUN_ID"
         
-        echo "RUN_ID=$RUN_ID" >> $GITHUB_ENV
+        # Simpan ke output
         echo "run_id=$RUN_ID" >> $GITHUB_OUTPUT
 
     - name: 6. Upload Artifacts (Model)
       uses: actions/upload-artifact@v4
       with:
         name: ml-model-artifacts
-        # Upload seluruh folder mlruns untuk keperluan debugging/history
         path: MLProject/mlruns 
 
     - name: 7. Login to Docker Hub
@@ -72,17 +71,22 @@ jobs:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-    # 5. Build & Push Docker (FIXED)
+    # 5. Build & Push Docker (DIPERBAIKI)
     - name: 8. Build Docker Image with MLflow
       run: |
-        RUN_ID=${{ steps.get_run_id.outputs.run_id }}
+        # Ambil RUN_ID yang sudah dibersihkan dari langkah 5
+        RUN_ID="${{ steps.get_run_id.outputs.run_id }}"
         
-        # SANGAT PENTING: Gunakan Tracking URI yang sama persis (Absolute Path)
+        # KUNCI KEBERHASILAN: Gunakan 'file://' + Absolute Path
+        # Ini memaksa MLflow membaca database di lokasi yang TEPAT
         export MLFLOW_TRACKING_URI="file://${{ github.workspace }}/MLProject/mlruns"
         
-        echo "Building Docker for RUN_ID: $RUN_ID using URI: $MLFLOW_TRACKING_URI"
+        echo "🔍 Debug Info:"
+        echo "   RUN_ID: $RUN_ID"
+        echo "   URI   : $MLFLOW_TRACKING_URI"
         
-        # Gunakan sintaks 'runs:/' yang standar
+        # Gunakan sintaks standar 'runs:/' 
+        # MLflow akan otomatis mencari folder artifact berdasarkan ID dan URI di atas
         mlflow models build-docker \
           --model-uri "runs:/$RUN_ID/model" \
           --name "firecrown/model-gym-ci" \
@@ -90,24 +94,24 @@ jobs:
 
     - name: 9. Tag and Push Docker Image
       run: |
+        # Tag image yang di-build di Langkah 8
         docker tag "firecrown/model-gym-ci" "${{ secrets.DOCKERHUB_USERNAME }}/model-gym-ci:latest"
+        
+        # Push image ke Docker Hub
         docker push "${{ secrets.DOCKERHUB_USERNAME }}/model-gym-ci:latest"
 
     # 6. Push Artefak kembali ke Repo 
     - name: 10. Commit and push ML artifacts
-      # Tambahkan 'continue-on-error' agar jika tidak ada perubahan, job tetap hijau
-      continue-on-error: true
       run: |
         git config --global user.name 'github-actions[bot]'
         git config --global user.email 'github-actions[bot]@users.noreply.github.com'
         
-        # Pastikan kita menarik perubahan terbaru dulu untuk menghindari konflik
-        git pull origin main --rebase
-        
+        # Cari file artefak di 'MLProject/'
         git add MLProject/*.png MLProject/*.json
         
+        # Cek jika ada perubahan untuk di-commit
         if [ -n "$(git status --porcelain)" ]; then
-          git commit -m "[CI] Add classification plot and metrics for Run $RUN_ID"
+          git commit -m " [CI] Add classification matrix and metrics"
           git push
         else
           echo "Tidak ada artefak baru untuk di-commit."
