--- a/.github/workflows/ci_pipeline.yml
+++ b/.github/workflows/ci_pipeline.yml
@@ -39,10 +39,10 @@ jobs:
     - name: 5. Get latest MLflow run_id
       id: get_run_id
       run: |
-        RUN_ID=$(ls -1t MLProject/mlruns/0 | head -n 1)
-        echo "RUN_ID=$RUN_ID" >> $GITHUB_ENV
-        echo "run_id=$RUN_ID" >> $GITHUB_OUTPUT
-        echo "Latest run_id: $RUN_ID"
+        MODEL_ID=$(ls MLProject/mlruns/0/models | head -1)
+        echo "model_id=$MODEL_ID" >> $GITHUB_ENV
+        echo "Model ID: $MODEL_ID"
+
 
     - name: 6. Upload Artifacts (Model)
       uses: actions/upload-artifact@v4
@@ -59,19 +59,10 @@ jobs:
     #  5. Build & Push Docker
     - name: 8. Build Docker Image with MLflow
       run: |
-        # Ambil RUN_ID dari langkah 5
-        RUN_ID=${{ steps.get_run_id.outputs.run_id }}
-        
-        # Beritahu MLflow di mana harus mencari 'mlruns'
-        export MLFLOW_TRACKING_URI=MLProject/mlruns
-        
-        echo "Membangun Docker image untuk RUN_ID: $RUN_ID dari $MLFLOW_TRACKING_URI"
-        
-        # Sekarang sintaks 'runs:/' akan berfungsi
         mlflow models build-docker \
-          --model-uri "MLProject/mlruns/0/$RUN_ID/artifacts/model" \
-          --name "firecrown/model-gym-ci" \
-          --env-manager=local
+          -m "MLProject/mlruns/0/models/${{ env.model_id }}/artifacts" \
+          -n "${{ secrets.DOCKERHUB_USERNAME }}/model-gym-ci:latest"
+
 
     - name: 9. Tag and Push Docker Image
       run: |
