--- a/.github/workflows/ci_pipeline.yml
+++ b/.github/workflows/ci_pipeline.yml
@@ -33,7 +33,8 @@ jobs:
     - name: 4. Run MLflow Project (Training)
       run: |
         # Jalankan 'main' entry point dari file MLProject
-        mlflow run MLProject --env-manager=local
+        mlflow run . --env-manager=local
+        
 
     #  4. Menyimpan Artefak
     - name: 5. Get latest MLflow run_id
