--- a/.github/workflows/ci_pipeline.yml
+++ b/.github/workflows/ci_pipeline.yml
@@ -39,9 +39,8 @@ jobs:
     - name: 5. Get latest MLflow run_id
       id: get_run_id
       run: |
-        MODEL_ID=$(ls MLProject/mlruns/0/models | head -1)
-        echo "model_id=$MODEL_ID" >> $GITHUB_ENV
-        echo "Model ID: $MODEL_ID"
+        RUN_ID=$(ls -td mlruns/*/* | head -1 | sed 's#.*/##')
+        echo "MLFLOW_RUN_ID=$RUN_ID" >> $GITHUB_ENV
 
 
     - name: 6. Upload Artifacts (Model)
